--- a/it.unibo.radarSystem22/.classpath
+++ b/it.unibo.radarSystem22/.classpath
@@ -19,7 +19,12 @@
 			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/massi/OneDrive/Desktop/UniBo/Ingegneria dei Sistemi Software/issLab/it.unibo.radarSystem22/libs/it.unibo.radarSystem22.domain-1.0.jar">
+	<classpathentry kind="lib" path="C:/Users/massi/OneDrive/Desktop/UniBo/Ingegneria dei Sistemi Software/issLab/unibolibs/it.unibo.radarSystem22.domain-1.0.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/massi/OneDrive/Desktop/UniBo/Ingegneria dei Sistemi Software/issLab/unibolibs/it.unibo.comm2022-1.0.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
